Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49766

WinRT/Desktop: Copy to clipboard does not affect system clipboard

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.1
    • 5.6.0 Alpha
    • Other
    • None
    • WinRT/Windows 10 MSVC2015/64
    • WinRT
    • e7a06c984364a3ffb86b32921aa60672f7b71600

    Description

      • Run a WinRT app
      • Copy some text to clipboard
      • Start desktop app
      • Paste
      • Expected: Text should be inserted
      • Actual Nothing is inserted

      This seems to work with other Modern UI standard apps (News.etc)

      Attachments

        For Gerrit Dashboard: QTBUG-49766
        # Subject Branch Project Status CR V

        Activity

          People

            mkalinow Maurice Kalinowski
            kleint Friedemann Kleint
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes