src/plugins/platforms/winrt/qwinrtclipboard.cpp
@@ -1,0 +1,8 @@
+DECL|function|QWinRTClipboard
+DECL|function|convertToWindowsLineEnding
+DECL|function|mimeData
+DECL|function|onContentChanged
+DECL|function|setMimeData
+DECL|function|supportsMode
+DECL|macro|RETURN_NULLPTR_IF_FAILED
+DECL|typedef|ContentChangedHandler
