src/plugins/platforms/winrt/qwinrtintegration.h
@@ -93,6 +93,7 @@ public:
     QPlatformFontDatabase *fontDatabase() const Q_DECL_OVERRIDE;
     QPlatformInputContext *inputContext() const Q_DECL_OVERRIDE;
     QPlatformServices *services() const Q_DECL_OVERRIDE;
+    QPlatformClipboard *clipboard() const Q_DECL_OVERRIDE;
     Qt::KeyboardModifiers queryKeyboardModifiers() const Q_DECL_OVERRIDE;
 
     QStringList themeNames() const Q_DECL_OVERRIDE;
